// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders LinkButton with onClick and disabled props 1`] = `
.c0 {
  display: inline-block;
  border: none;
  border-radius: 0.25em;
  box-shadow: 0 0 0 0 rgba(71,167,75,1);
  box-sizing: border-box;
  background: rgb(211,211,211);
  padding: 0.75em 1em;
  text-align: center;
  line-height: 1.25;
  color: rgb(160,160,160);
  touch-action: manipulation;
}

.c0:hover,
.c0:active {
  outline: none;
}

<button
  class="c0"
  disabled=""
  role="option"
  type="button"
>
  Push Me
</button>
`;

exports[`renders LinkButton with onClick prop 1`] = `
.c0 {
  display: inline-block;
  border: none;
  border-radius: 0.25em;
  box-shadow: 0 0 0 0 rgba(71,167,75,1);
  box-sizing: border-box;
  background: rgb(211,211,211);
  cursor: pointer;
  padding: 0.75em 1em;
  text-align: center;
  line-height: 1.25;
  color: black;
  touch-action: manipulation;
}

.c0:hover,
.c0:active {
  outline: none;
}

<button
  class="c0"
  role="option"
  type="button"
>
  Push Me
</button>
`;
